; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/apr/tables/extr_apr_skiplist.c_get_b_rand.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/apr/tables/extr_apr_skiplist.c_get_b_rand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_b_rand.ph = internal global i32 32, align 4
@get_b_rand.randseq = internal global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @get_b_rand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_b_rand() #0 {
  %1 = load i32, i32* @get_b_rand.ph, align 4
  %2 = icmp sgt i32 %1, 31
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  store i32 0, i32* @get_b_rand.ph, align 4
  %4 = call i32 (...) @rand()
  store i32 %4, i32* @get_b_rand.randseq, align 4
  br label %5

5:                                                ; preds = %3, %0
  %6 = load i32, i32* @get_b_rand.randseq, align 4
  %7 = load i32, i32* @get_b_rand.ph, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @get_b_rand.ph, align 4
  %9 = shl i32 1, %7
  %10 = and i32 %6, %9
  ret i32 %10
}

declare dso_local i32 @rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
